# MultiagentSystem

./: .env.development  .env.production  .env.staging  .gitignore  AGENTS_MAINTENANCE_TEAM_FULL.md  ANALYSE_CLEANVIDEOHUB_NEXTGENERATION.md  ANALYSE_CONTRADICTION_AGENT_FACTORY.md  ANALYSE_MODELES_ACTUELS.md  ANNEXE_TECHNIQUE_IMPLÉMENTATION_ACTUELLE.md  CHANGELOG.md  CHANGELOG.md.backup  CONFIGURATION_OLLAMA_RTX3090_NEXTGENERATION.md  CORRECTION_TRAJECTOIRE_PROJET.md  DEMO_SYSTEME_COMMUNICATION_IA1_IA2.md  DOCKER_INSTALLATION_GUIDE.md  DOCUMENTATION_EQUIPE_MAINTENANCE_NEXTGENERATION.md  DOCUMENTATION_INDEX.md  ECOSYSTEME_MAINTENANCE_COMPLET_FINAL.md  EXPERT_FEEDBACK_CHATGPT_REFERENCE.md  EXPERT_FEEDBACK_CLAUDE_REFERENCE.md  EXPERT_FEEDBACK_GEMINI_REFERENCE.md  GUIDE_API_ORCHESTRATEUR.md  GUIDE_COMPLET_NEXTGENERATION.md  GUIDE_EXECUTION_POSTGRESQL_PARFAIT.md  GUIDE_FINAL_CONFIGURATION.md  GUIDE_INSTALLATION_SYNTHESE_AUTO_UPDATE.md  GUIDE_MODELES_LOCAUX_RTX3090.md  GUIDE_POSTGRES_EXECUTION.md  GUIDE_UTILISATION_NEXTGENERATION.md  INTEGRATION_DOCTEUR_PRODUCTION_RESUME.md  JOURNAL_COMMUNICATION_IA1_IA2.md  JOURNAL_EVOLUTION_EQUIPE.md  MIGRATION_LOGGING_TRACKING.md  MISE_A_JOUR_ANALYSE_TESTS.md  MISE_A_JOUR_DOCUMENTATION_FOURNISSEURS.md  MISE_A_JOUR_SUIVI_AUDIT_INTER_AGENT.md  MISSION_RENOMMAGE_OUTILS_COMPLETE.md  MISSION_REPAIR_AGENT_ARCHITECTURE_22.md  MISSION_REPAIR_AGENT_ARCHITECTURE_22_v2.md  MISSION_REPAIR_AGENT_FASTAPI_23.md  (+314 more)
.claude/: settings.local.json
20250620_projet_taskmanager/: DEPRECATED_PLAN_ACTION_TASKMASTER.md  PLAN_ACTION_TASKMASTER_FINAL.md  (+2 more)
(+3284 files in other folders)
